feat(venue): implement venue APIs and swagger docs
